--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:8080
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#Database config
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.username=test
+spring.datasource.password=test
+spring.jpa.hibernate.ddl-auto=create
+
+#JSP config
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
+spring.thymeleaf.enabled=false
